Name :			    lambdacula
Version :		    0.0
Description :       Zork-like text adventure game
License:            GPL
License-file:       LICENSE 
Author:             Raveline
Maintainer:         Raveline
Build-Type:         Simple
Cabal-Version:      >= 1.8

Executable Lambdacula
    Main-is:        Main.hs
    hs-source-dirs: src
    build-depends:  base, containers, mtl, split, lens, haskeline
-- PLEASE NOTE : you will most likely need libncurses5-dev installed on your distro to compile. 
